# gi-stub-gen

./: .gitignore  LICENSE  README.md  build-all.sh  build-base-stubs.sh  build-graphics-core-stubs.sh  build-gst-stubs.sh  build-gtk-stubs.sh  build-stubs.sh  justfile  pyproject.toml  test.info  usage.sh
src/gi_stub_gen/: __init__.py  __main__.py  adapter.py  gi_repo.py  gi_utils.py  gir_manager.py  inspect_utils.py  manager.py  manual_overrides.py  package.py  template.py  template_manager.py  test.py  utils.py
src/gi_stub_gen/cli/: gi_stub_gen.py
src/gi_stub_gen/manager/: gi_repo.py  gir_docs.py
src/gi_stub_gen/overrides/: __init__.py
src/gi_stub_gen/overrides/class_/: GIRepository.py  GObject.py  Gst.py
src/gi_stub_gen/parser/: __init__.py  alias.py  builtin_function.py  class_.py  constant.py  enum.py  fields.py  function.py  gir.py  module.py  python_function.py  signals.py
src/gi_stub_gen/schema/: __init__.py  alias.py  builtin_function.py  class_.py  constant.py  enum.py  function.py  module.py  signals.py  utils.py
src/gi_stub_gen/templates/: alias.jinja  builtin_function.jinja  callback.jinja  class.jinja  class_fields.jinja  class_props.jinja  class_signals.jinja  constant.jinja  enum.jinja  function.jinja  function_args.jinja  function_compact.jinja  function_docstring.jinja  module.pyi.jinja
src/gi_stub_gen/utils/: gi_utils.py  gir_docs.py  gst.py  inspect_utils.py  utils.py
src/gi_stub_generator/: create.py  docstring.py  gi_utils.py  gir_parser.py  package.py  parse.py  schema.py  template.py  utils.py
src/gi_stub_generator/cli/: gi_stub_gen.py
src/gi_stub_generator/parser/: builtin_function.py  class_.py  constant.py  enum.py  function.py  gir.py  module.py
src/gi_stub_generator/schema/: __init__.py  alias.py  callback.py  class_.py  constant.py  enum.py  function.py  module.py  utils.py
stubs/gi-base-stubs/: README.md  pyproject.toml
stubs/gi-base-stubs/src/gi-stubs/: __init__.pyi
stubs/gi-base-stubs/src/gi-stubs/repository/: GIRepository.pyi  GLib.pyi  GModule.pyi  GObject.pyi  Gio.pyi  GioUnix.pyi
stubs/gi-graphics-core-stubs/: README.md  pyproject.toml
stubs/gi-graphics-core-stubs/src/gi-stubs/repository/: Graphene.pyi  HarfBuzz.pyi  Pango.pyi  PangoCairo.pyi  cairo.pyi  freetype2.pyi
stubs/gi-gst-stubs/: README.md  pyproject.toml
stubs/gi-gst-stubs/src/gi-stubs/repository/: Gst.pyi  GstApp.pyi  GstAudio.pyi  GstBase.pyi  GstPbutils.pyi  GstRtp.pyi  GstRtsp.pyi  GstSdp.pyi  GstVideo.pyi
stubs/gi-gtk-stubs/: README.md  pyproject.toml
stubs/gi-gtk-stubs/src/gi-stubs/repository/: Atk.pyi  Gdk.pyi  GdkPixbuf.pyi  Gsk.pyi  Gtk.pyi
tests/: __init__.py  conftest.py  test_class.py  test_constant.py  test_docs.py  test_enum.py  test_gst.py  test_private_api.py  test_utils.py
tests/apps/: simple_gst.py  simple_gtk.py
