[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gi_stub_generator"]

[project]
name = "gi_stub_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Matteo Bruni", email = "matteo.bruni@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "pygobject>=3.50.0",
    "pygobject-stubs>=2.12.0",
    "tomlkit>=0.13.3",
    "typer>=0.15.1",
]

[dependency-groups]
dev = ["cmake>=3.31.4", "ipython>=8.31.0", "lxml-stubs>=0.5.1"]

[project.scripts]
gi_stub_gen = "gi_stub_generator.cli.gi_stub_gen:app"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/ignore",
    "**/.venv",
    ".venv",
]
ignore = ["**/ignore", "**/.venv", ".venv"]
