[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gi_stub_gen"]

[project]
name = "gi-stub-gen"
version = "0.0.1"
description = "A type hint/stub generator for GObject Introspection libraries"
readme = "README.md"
authors = [{ name = "Matteo Bruni", email = "matteo.bruni@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.5",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "pygobject==3.54.0",
    "rich>=13.9.4",
    "tomlkit>=0.13.3",
    "typer>=0.15.1",
]
license = { file = "LICENSE" }
keywords = [
    "pygobject",
    "gobject",
    "introspection",
    "gir",
    "stubs",
    "type-hints",
    "typing",
    "mypy",
    "pyright",
    "autocompletion",
    "ide",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment :: Gnome",
    "Environment :: Console",
    "Typing :: Typed",
]

[dependency-groups]
dev = ["cmake>=3.31.4", "ipython>=8.31.0", "lxml-stubs>=0.5.1"]

[project.scripts]
gi-stub-gen = "gi_stub_gen.cli.gi_stub_gen:app"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/ignore",
    "**/.venv",
    ".venv",
]
ignore = ["**/ignore", "**/.venv", ".venv"]
# ignore missing source for modules like gi.repository
reportMissingModuleSource = "none"
# generated stubs will be placed in these folders so we 
# dont need to install them while developing gi-stub-gen
extraPaths = [
    "stubs/gi-base-stubs/src",
    "stubs/gi-gst-stubs/src",
    "stubs/gi-gtk-stubs/src",
]
