[project]
name = "gi-gst-stubs"
version = "1.26.0"
description = "GI Stubs for GStreamer"
readme = "README.md"
authors = [
    { name = "Matteo Bruni", email = "matteo.bruni@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["gi-base-stubs"]
keywords = ["types", "stub", "gi", "gobject", "introspection"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gi-stubs"]