
[project]
name = "gi-gtk-stubs"
version = "4.0.0"
description = "Type stubs for GI libraries"
readme = "README.md"
authors = [
    { name = "Name Surname", email = "author@example.com" }
]
requires-python = ">=3.10"
dependencies = ["gi-graphics-core-stubs"]
keywords = ["types", "stub", "gi", "gobject", "introspection"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gi-stubs"]